[gd_scene load_steps=2 format=3 uid="uid://co267wx1axkxd"]

[ext_resource type="Script" path="res://Cenas/Scripts/menu_Inicial.gd" id="1_x7u73"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x7u73")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Titulo_txt" type="Label" parent="ColorRect"]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -382.0
offset_right = 382.0
offset_bottom = 140.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "PROJETO PID√ÉO"
horizontal_alignment = 1
vertical_alignment = 1
text_direction = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -224.0
offset_right = 200.0
offset_bottom = 276.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="btn_jogar" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 0.352941)
theme_override_font_sizes/font_size = 30
text = "JOGAR"
flat = true

[node name="btn_creditos" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 0.352941)
theme_override_font_sizes/font_size = 30
text = "CREDITOS"
flat = true

[node name="btn_sair" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_hover_color = Color(1, 1, 1, 0.352941)
theme_override_font_sizes/font_size = 30
text = "SAIR"
flat = true

[connection signal="pressed" from="VBoxContainer/btn_jogar" to="." method="_on_btn_jogar_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_creditos" to="." method="_on_btn_creditos_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_sair" to="." method="_on_btn_sair_pressed"]
